[gd_scene load_steps=3 format=3 uid="uid://cfefyis82sthe"]

[ext_resource type="AudioStream" uid="uid://d05i7cea7no77" path="res://Audio/YES.mp3" id="1_321hb"]
[ext_resource type="Script" uid="uid://cae5lc84vs48d" path="res://scenes/game_state_win.gd" id="1_jy5aj"]

[node name="GameState" type="Node3D"]
script = ExtResource("1_jy5aj")

[node name="YouWinLabel" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YouWinTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ClappingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_321hb")
volume_db = -20.0

[connection signal="timeout" from="YouWinTimer" to="." method="_on_timer_timeout"]
